force-app/main/default/objects/Exception__e/Exception__e.object-meta.xml
<CustomObject>
    <description>Durable exception event. Published (PublishImmediately) from flow fault paths — via the shared Log_Error subflow — so the error is logged even when the triggering transaction rolls back (e.g. a Custom Error block). Subscribed by the Exception_Event_Logger flow, which persists an Error_Log__c row.</description>
    <label>Exception</label>
    <pluralLabel>Exceptions</pluralLabel>
</CustomObject>