force-app/main/default/objects/Exception__e/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Human-readable context for the failure. Maps to Error_Log__c.Context_Info__c.</description>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>