force-app/main/default/objects/Exception__e/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>The raw fault message ($Flow.FaultMessage). Maps to Error_Log__c.Error_Message__c (truncated to 255 by the subscriber).</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>