force-app/main/default/objects/Exception__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Id of the record being processed when the fault occurred. Maps to Error_Log__c.Record_Involved__c.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>