force-app/main/default/objects/Exception__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Low / Medium / High / Critical. Maps to the Error_Log__c.Severity__c restricted picklist — send an exact value.</description>
    <label>Severity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>