force-app/main/default/objects/Exception__e/fields/Source_Flow__c.field-meta.xml
<CustomField>
    <fullName>Source_Flow__c</fullName>
    <description>API name of the flow that hit the fault. Maps to Error_Log__c.Apex_Class__c.</description>
    <label>Source Flow</label>
    <length>80</length>
    <type>Text</type>
</CustomField>