force-app/main/default/objects/Exception__e/fields/Source_Step__c.field-meta.xml
<CustomField>
    <fullName>Source_Step__c</fullName>
    <description>API name of the element that faulted. Maps to Error_Log__c.Apex_Method__c.</description>
    <label>Source Step</label>
    <length>80</length>
    <type>Text</type>
</CustomField>