force-app/main/default/objects/Exception__e/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Optional detailed trace. Maps to Error_Log__c.Stack_Trace__c (truncated to 255 by the subscriber).</description>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>