force-app/main/default/objects/Exception__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>Id of the user running the automation at publish time (captured because the subscriber runs as Automated Process). Maps to Error_Log__c.User__c.</description>
    <label>User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>